-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
-
06c838b0b983f57177d17931e602303f98f3b437
The service URL has changed to http://places.nlp.nokia.com/places/ and http://places.nlp.nokia.com.cn/places/
With this change comes a few minor adjustments:
Type URIs are no longer used, type URNs are used instead. Making them invariant to the service URL.
The refId attribute is no longer present.
For Gerrit Dashboard: QTBUG-24984 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
27929,2 | Update Nokia places service URLs. | master | qt/qtlocation | Status: MERGED | +2 | 0 |