Update Nokia places service URLs.

Update to the new places service URLs.
Remove the /places path from the host name.

Task-number: QTBUG-24984
Change-Id: Ib0be6505a457e16bb5ff2f309a2c56c8b3ef1c57
Reviewed-by: abcd <amos.choy@nokia.com>