src/plugins/geoservices/nokia/placesv2/qplacesearchreplyimpl.cpp
@@ -161,8 +161,6 @@ void QPlaceSearchReplyImpl::replyFinished()
 
         place.setPlaceId(href.path().mid(18, 41));
 
-        //const QString refId = item.value(QLatin1String("refId")).toString();
-
         QPlaceAttribute provider;
         provider.setText(QLatin1String("nokia"));
         place.setExtendedAttribute(QPlaceAttribute::Provider, provider);
